[package]
name = "runtime_class_selection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#specs = "0.17.0"
bevy_ecs = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
engine = {path = "./engine"}
#game_code = {path = "./game_code"}

libloading = "0.7"

windows = {version = "0.37.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation"]}