[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["dylib"]

[dependencies]
bevy_ecs = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rand = "*"
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
macro_rules_attribute = "0.1.0"